[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/ghost_sprites.png" type="Texture" id=1]
[ext_resource path="res://scripts/Ghost.gd" type="Script" id=3]
[ext_resource path="res://prefabs/SpriteShadow.tscn" type="PackedScene" id=4]
[ext_resource path="res://shaders/enemy_shader.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/blink_color = Color( 1, 0, 0.501961, 1 )
shader_param/blink_magnitude = 0.0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 new_color : hint_color = vec4(0.13, 0.0, 0.32, 0.75);
//uniform vec2 offset = vec2(-3.0, 3.0);
// + vec2(cos(TIME) * UV.x * UV.y, UV.y * UV.x * sin(TIME)) * SCREEN_PIXEL_SIZE * 10.0

void fragment(){
	vec4 col = textureLod(TEXTURE, UV, 1.0);
	col.a *= new_color.a;
	col.rgb *= col.a;
	col.rgb = new_color.rgb;
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/new_color = Color( 0.13, 0, 0.32, 0.75 )

[sub_resource type="CircleShape2D" id=4]
radius = 7.0

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "flicker"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.333333 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 64.0

[node name="Ghost" type="Sprite" groups=[
"enemy",
]]
material = SubResource( 1 )
position = Vector2( 224, 64 )
texture = ExtResource( 1 )
hframes = 3
script = ExtResource( 3 )
max_life = 3.0

[node name="Shadow" parent="." instance=ExtResource( 4 )]
material = SubResource( 3 )
texture = ExtResource( 1 )
offset = Vector2( 0, 0 )
hframes = 3
starting_position = Vector2( 2, 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy",
]]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 5 )

[node name="TransparencyAnimator" type="AnimationPlayer" parent="."]
autoplay = "flicker"
anims/flicker = SubResource( 6 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="FollowArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]
modulate = Color( 0, 0, 0, 0.27451 )
shape = SubResource( 7 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="body_entered" from="FollowArea" to="." method="_on_FollowArea_body_entered"]
[connection signal="body_exited" from="FollowArea" to="." method="_on_FollowArea_body_exited"]
